# fc-teama-agent-hack

./: .gitignore  AGENTS.md  EXAMPLES.md  README.md  SCENARIOS.md  TODO.md  api.py  evals.py  gitignore  main.py  pyproject.toml  tests.py  utils.py  workflow_context.py
custom_agents/: __init__.py  infotrack.py  lead_reviewer.py  manager.py  response_ingestion.py
data/: README.md  emails.json  laserfiche_original.json  salesforce_advisors_original.json  salesforce_clients_original.json  salesforce_leads.json  salesforce_notifications_original.json  scenarios_original.json
data/sample_input/: Casey_Rhodes_Planning_Notes.csv
evals/: __init__.py  eval_agents.py
frontend/: package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: control-plane.module.css  control-plane.tsx
frontend/lib/: api.ts  types.ts
guardrails/: __init__.py  agent_guardrails.py  tool_guardrails.py
schemas/: form_1500_client_profile_schema.json  form_1500_schema.py
scripts/: dev_stack.py  path_utils.py  pdf_to_image_only_pdf.py  reset_runtime_data.py
tools/: __init__.py  ask_human_input.py  calculator.py  document_processor.py  email_template_loader.py  emails.py  laserfiche.py  salesforce.py  zocks.py
workflow/: __init__.py  context.py  runner.py  runtime.py  timeline.py
